[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]
rust-version = "1.90"

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic, 
decentralised, and resilient mesh networking protocol designed for communication over any physical 
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and 
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]

# Protobuf and gRPC (optional)
tonic = { version = "0.13.0", optional = true }
prost = { version = "0.13.5", optional = true }

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.49", features = [
    "rt",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "signals",
] }
tokio-stream = "0.1"
tokio-util = "0.7"

rmp = "0.8.14"
rmp-serde = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11"

# Logging
log = "0.4.27"
env_logger = "0.10"

[dev-dependencies]
hex = "0.4"

[features]
default = ["alloc"]
alloc = []
fernet-aes128 = []
python-interop = ["default"]
proto = ["prost", "tonic", "tonic-build"]

[build-dependencies]
tonic-build = { version = "0.13.0", optional = true }

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"

[[example]]
name = "link_client"
path = "examples/link_client.rs"

[[example]]
name = "kaonic_client"
path = "examples/kaonic_client.rs"
required-features = ["proto"]

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"

[[example]]
name = "kaonic_tcp_mesh"
path = "examples/kaonic_tcp_mesh.rs"
required-features = ["proto"]

[[example]]
name = "kaonic_mesh"
path = "examples/kaonic_mesh.rs"
required-features = ["proto"]

[[example]]
name = "multihop"
path = "examples/multihop.rs"

[[example]]
name = "ratchet"
path = "examples/ratchet.rs"

[[example]]
name = "filetransfer"
path = "examples/filetransfer.rs"
